--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<h1>API Para Predição de Plantação</h1>
+<h2>Predicting Plantation</h2>
+<pre>Cadeira: Engenharia de Software</pre>
+<pre>Professora: Ingrid</pre>
